Fix mobile overflow scroll

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,9 +6,13 @@
   padding: 0;
 }
 
-html, body {
+html {
   overflow-x: hidden;
+}
+
+body {
   max-width: 100%;
+  overscroll-behavior-y: none;
 }
 
 :root {
